test/cli/install/__snapshots__/bun-install.test.ts.snap
// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`should report error on invalid format for package.json 1`] = `
"1 | foo
    ^
error: Unexpected foo
    at [dir]/package.json:1:1
ParserError parsing package.json in "[dir]/"
"
`;

exports[`should report error on invalid format for dependencies 1`] = `
"1 | {"name":"foo","version":"0.0.1","dependencies":[]}
                                                  ^
error: dependencies expects a map of specifiers, e.g.
  "dependencies": {
    <green>"bun"<r>: <green>"latest"<r>
  }
    at [dir]/package.json:1:47
"
`;

exports[`should report error on invalid format for workspaces 1`] = `
"1 | {"name":"foo","version":"0.0.1","workspaces":{"packages":{"bar":true}}}
                                                ^
error: Workspaces expects an array of strings, e.g.
  "workspaces": [
    "path/to/package"
  ]
    at [dir]/package.json:1:45
"
`;
